# signal-client

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CODEX_PROMPT.md  LICENSE  README.md  api_analysis.md  api_models.md  bandit.yaml  cli_rest_api_swagger.json  index.html  macros.py  mkdocs.yml  pyproject.toml  refactoring_plan.md  release.sh
.githooks/: pre-commit
.github/: release-drafter.yml
.github/workflows/: api_audit.yml  ci.yml  docs-build.yml  docs-release.yml  docs.yml  main.yml  performance.yml  publish.yml  release-drafter.yml  release.yml
brand_voice/: index.html
branding/: index.html
docs/: 01_architecture.md  02_core_concepts.md  03_domain_layer.md  04_services_layer.md  05_infrastructure_layer.md  06_api_reference.md  07_getting_started_tutorial.md  08_configuration.md  13_interactive_tutorial.ipynb  README.md  REFACTOR_PLAN.md  api-reference.md  architecture.md  brand_voice.md  branding.md  configuration.md  diagnostics.md  docs_plan.md  examples.md  feature-tour.md  getting_started.md  index.md  observability.md  operations.md  overview.md  production_secrets.md  quickstart.md  tee_privacy_architecture.md  troubleshooting.md  use-cases.md
docs/appendix/: changelog.md  resources.md  tee_privacy_architecture.md
docs/assets/: mermaid-init.js
docs/assets/brand/: theme.css
docs/bots/: architecture.md  configuration.md  diagnostics.md  index.md  observability.md  quickstart.md  testing.md
docs/bots/guides/: recipes.md  writing-async-commands.md
docs/changelog/: index.md
docs/components/: playground.md
docs/contribute/: coding-standards.md  production-secrets.md  test-plan.md
docs/contributing/: docs-authoring.md  docs-ops.md
docs/discover/: feature-tour.md  overview.md  use-cases.md
docs/guides/: advanced_usage.md  production_deployment.md  recipes.md  release.md  writing-async-commands.md
docs/reference/: api.md  commands.md  schema.md
docs/run/: observability.md  operations.md  performance.md
docs/styles/: extra.css  theme.css
examples/: README.md  api_clients_and_dlq.py  basic_bot.py  config_resiliency_and_metrics.py  context_helpers.py  index.html  ping_bot.py  reminder_bot.py  routing_and_middleware.py  webhook_relay.py
getting_started/: index.html
guides/advanced_usage/: index.html
guides/production_deployment/: index.html
guides/release/: index.html
macros/: main.py
openspec/: project.md
openspec/changes/audit-public-release-readiness/: AUDIT_REPORT.md  proposal.md  tasks.md
scripts/: audit_api.py  run_tests.py
search/: search_index.json
signal_client/: bot.py  container.py  context.py  link_previews.py
signal_client/adapters/api/: __init__.py  base_client.py
signal_client/core/: __init__.py  context.py
signal_client/infrastructure/: api_service.py  websocket_client.py
signal_client/infrastructure/api_clients/: __init__.py
signal_client/infrastructure/storage/: base.py  redis.py  sqlite.py
signal_client/runtime/: listener.py  worker_pool.py
signal_client/runtime/services/: message_parser.py
signal_client/services/: command_service.py  message_service.py
src/signal_client/: __init__.py  app.py  bot.py  cli.py  command.py  compatibility.py  config.py  container.py  context.py  context_deps.py  entities.py  examples.py  exceptions.py  health_server.py  metrics.py  metrics_server.py  release_guard.py
src/signal_client/domain/: exceptions.py
src/signal_client/infrastructure/: websocket_client.py
src/signal_client/observability/: __init__.py  logging.py  metrics.py
src/signal_client/runtime/: command_router.py  listener.py  worker_pool.py
src/signal_client/services/: __init__.py  attachment_downloader.py  checkpoint_store.py  circuit_breaker.py  dead_letter_queue.py  intake_controller.py  lock_manager.py  message_parser.py  message_service.py  models.py  persistent_queue.py  rate_limiter.py  storage_service.py  worker_pool_manager.py
src/signal_client/storage/: __init__.py  memory.py  sqlite.py
tests/: conftest.py  test_bot.py  test_command.py  test_compatibility.py  test_config.py  test_context.py  test_metrics.py  test_performance.py  test_release_guard.py  test_stress.py
tests/adapters/api/: conftest.py  test_accounts_client.py  test_attachments_client.py  test_base_client.py  test_contacts_client.py  test_devices_client.py  test_exceptions.py  test_general_client.py  test_groups_client.py  test_identities_client.py  test_messages_client.py  test_profiles_client.py  test_reactions_client.py  test_receipts_client.py  test_search_client.py  test_sticker_packs_client.py
tests/adapters/storage/: test_memory.py  test_redis.py
tests/adapters/transport/: test_websocket_client.py
tests/app/: test_bot.py  test_performance.py  test_stress.py
tests/core/: test_command.py  test_compatibility.py  test_config.py  test_context.py
tests/infrastructure/: test_base_client.py  test_websocket_client.py
tests/infrastructure/api_clients/: conftest.py  test_accounts_client.py  test_attachments_client.py  test_contacts_client.py  test_devices_client.py  test_exceptions.py  test_general_client.py  test_groups_client.py  test_identities_client.py  test_messages_client.py  test_profiles_client.py  test_reactions_client.py  test_receipts_client.py  test_search_client.py  test_sticker_packs_client.py
tests/infrastructure/storage/: test_redis.py
tests/integration/: test_circuit_breaker.py  test_cli.py  test_end_to_end.py  test_lock_manager.py  test_storage.py
tests/observability/: test_logging.py  test_metrics.py
tests/runtime/: test_application_circuit_intake.py
tests/runtime/services/: conftest.py  test_attachment_downloader.py  test_dead_letter_queue.py  test_events_parser.py  test_message_parser.py  test_message_service.py  (+2 more)
tests/services/: conftest.py  test_command_service.py  test_dead_letter_queue.py  test_message_parser.py  test_message_service.py  test_rate_limiter.py  test_storage_service.py  test_worker.py  test_worker_pool_manager.py
tests/storage/: test_memory.py
tests/tools/: test_release_guard.py
tools/: audit_api.py  release_guard.py
(+26 files in other folders)
