[tool.poetry]
name = "signal_client"
version = "0.1.0"
description = "A Python framework for building Signal bots."
authors = ["cornellshakh"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cornellshakh/signal_client"
keywords = ["Signal", "Bot", "Framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/cornellshakh/signal_client/issues"
"Documentation" = "https://github.com/cornellshakh/signal_client#readme"

[tool.poetry.dependencies]
python = ">=3.9"
APScheduler = ">=3.11.0"
aiohttp = ">=3.11.9"
websockets = ">=14.1"
phonenumbers = ">=8.13.54"
pydantic = ">=2.11.7"
packaging = ">=25.0"
dependency-injector = ">=4.41.0"
aiosqlite = ">=0.20.0"
structlog = ">=24.1.0"
eval-type-backport = {version = ">=0.2.0", python = "<3.10"}

pytest-asyncio = ">=0.23.8"
aresponses = ">=3.0.0"
pytest = ">=8.3.2"
pytest-mock = ">=3.14.0"
pytest-xdist = "^3.8.0"
pytest-timeout = "^2.4.0"
python-semantic-release = "<9"

[tool.poetry.group.dev.dependencies]
black = ">=24.10.0"
ruff = ">=0.5.0"
pre-commit = ">=4.0.1"
twine = "^6.2.0"
redis = ">=5.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",   # Docstrings
  "FIX", # TODO, FIXME and other messages
  "ERA001", # Commented out code
  "COM812", # Trailing commas, the formatter already does this
  "T201", # Print statements
  "TC001", # Move application import into a type-checking block
  "TC002", # Move third-party import into a type-checking block
  "TC003", # Move standard library import into a type-checking block
]

[tool.ruff.lint.per-file-ignores]
# Tests can ignore a few extra rules
"tests/**.py" = [
    "ANN201", # Missing return type annotation for public function
    "S101",   # Use of assert is detected
    "INP001", # Missing __init__.py file
]

[tool.ruff.lint.flake8-tidy-imports]
banned-api = { "logging" = { "msg" = "Use `structlog` instead of `logging`" } }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.semantic_release]
# Configuration for python-semantic-release
branch = "main"
version_variables = [
    "pyproject.toml:tool.poetry.version"
]

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.publish]
dist_path = "dist/"
upload_to_pypi = true
upload_to_release = true
build_command = "poetry build"
