[tool.poetry]
name = "signal_client"
version = "0.1.0"
description = "A Python framework for building Signal bots."
authors = ["cornellsh"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cornellsh/signal_client"
keywords = ["Signal", "Bot", "Framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{include = "signal_client", from = "src"}]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/cornellsh/signal_client/issues"
"Documentation" = "https://github.com/cornellsh/signal_client#readme"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
APScheduler = ">=3.11.0,<4.0.0"
aiohttp = ">=3.11.9,<4.0.0"
websockets = ">=14.1,<15.0"
phonenumbers = ">=8.13.54,<9.0"
pydantic = ">=2.12.0,<2.13.0"
packaging = ">=25.0,<26.0"
aiosqlite = ">=0.20.0,<1.0.0"
structlog = ">=24.4.0,<24.5.0"
eval-type-backport = {version = ">=0.2.0", python = "<3.10"}
pydantic-settings = ">=2.11.0,<2.12.0"
prometheus-client = ">=0.20.0,<1.0.0"

[tool.poetry.group.dev.dependencies]
black = ">=24.10.0"
ruff = ">=0.5.0"
pre-commit = ">=4.0.1"
twine = "^6.2.0"
redis = ">=5.2.0"
mypy = ">=1.10.0"
bandit = ">=1.7.9"
pytest-cov = ">=5.0.0"
pytest-asyncio = ">=0.23.8"
aresponses = ">=3.0.0"
pytest = ">=8.3.2"
pytest-mock = ">=3.14.0"
pytest-xdist = "^3.8.0"
pytest-timeout = "^2.4.0"
python-semantic-release = "<9"
tqdm = "^4.67.1"
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.0"
mkdocstrings = "^1.0.0"

[tool.poetry.scripts]
audit-api = "scripts.audit_api:main"
inspect-dlq = "signal_client.cli:main"
pytest-safe = "scripts.run_tests:main"
release-guard = "scripts.release_guard:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "FIX", # TODO, FIXME and other messages
  "ERA001", # Commented out code
  "COM812", # Trailing commas, the formatter already does this
  "T201", # Print statements
  "TC001", # Move application import into a type-checking block
  "TC002", # Move third-party import into a type-checking block
  "TC003", # Move standard library import into a type-checking block
]

[tool.ruff.lint.per-file-ignores]
# Tests can ignore a few extra rules
"tests/**.py" = [
    "ANN201", # Missing return type annotation for public function
    "S101",   # Use of assert is detected
    "INP001", # Missing __init__.py file
    "ANN001", # Missing type annotation for function argument
    "ANN202", # Missing return annotation for private function
    "ANN204", # Missing return type annotation for __init__
    "ARG001", # Unused function argument
    "PLR2004", # Magic value used in comparison
    "PGH003", # Use specific rule codes when ignoring type issues
    "SLF001", # Private member accessed
    "N803",  # Argument name should be lowercase
    "RET504", # Unnecessary variable assignment before return
    "SIM105", # Use contextlib.suppress instead of try/except/pass
    "SIM117", # Combine nested with statements
    "TRY003", # Long exception message outside class
    "EM101", # Exception must not use string literal
    "EM102", # Exception must not use f-string literal
    "ANN002", # Missing type annotation for *args
    "ANN003", # Missing type annotation for **kwargs
    "PT019", # Fixture without value is injected as parameter
]

[tool.ruff.lint.flake8-tidy-imports]
banned-api = { "logging" = { "msg" = "Use `structlog` instead of `logging`" } }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 300
timeout_method = "thread"
markers = [
    "performance: opt-in performance/stress benchmarks skipped on CI",
]

[tool.semantic_release]
# Configuration for python-semantic-release
branch = "main"
version_variables = [
    "pyproject.toml:tool.poetry.version"
]

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.publish]
dist_path = "dist/"
upload_to_pypi = true
upload_to_release = true
build_command = "poetry build"

[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true
files = ["src"]
